--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8" />
     <!-- 여기 아래에 복사 붙여넣기 합니다. -->
 <!-- Google tag (gtag.js) -->
-<script 
-  async 
-  src="https://www.googletagmanager.com/gtag/js?id=G-CLLSBY73K5"
-  ></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EM9459PM92"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){
-    dataLayer.push(arguments);}
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-CLLSBY73K5');
+  gtag('config', 'G-EM9459PM92');
+</script><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EM9459PM92"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EM9459PM92');
 </script>
     <!-- 여기 위에 복사 붙여넣기 합니다. -->
   </head>
